--- a/contact.html
+++ b/contact.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Contact Us</title>
 </head>
 <body>
@@ -11,6 +11,8 @@
   <form id="contact-form" style="display: flex; flex-direction: column; max-width: 400px; margin: 0 auto;">
     <label for="name" style="margin-bottom: 5px;">Name:</label>
     <input type="text" id="name" name="name" required style="margin-bottom: 10px; padding: 5px;">
+    <label for="phone-number" style="margin-bottom: 5px;">Phone Number:</label>
+    <input type="phone-number" id="phone-number" name="phone-number" required style="margin-bottom: 10px; padding: 5px;">
     <label for="email" style="margin-bottom: 5px;">Email:</label>
     <input type="email" id="email" name="email" required style="margin-bottom: 10px; padding: 5px;">
     <label for="message" style="margin-bottom: 5px;">Message:</label>
@@ -23,11 +25,12 @@
 
   // Get form values
   var name = document.getElementById("name").value;
+  var phoneNumber = document.getElementById("phoneNumber").value;
   var email = document.getElementById("email").value;
   var message = document.getElementById("message").value;
 
   // Validate form data
-  if (name === '' || email === '' || message === '') {
+  if (name === '' || phoneNumber === '' || email === '' || message === '') {
     alert("Please fill in all fields");
     return;
   }
@@ -36,6 +39,7 @@
   var url = "https://example.com/submit-contact-form";
   var formData = new FormData();
   formData.append("name", name);
+  formData.append("phoneNumber", phone-number);
   formData.append("email", email);
   formData.append("message", message);
 
