--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 
           <ul class="nav-list d-flex">
             <li class="nav-item">
-              <a href="/" class="nav-link">Home</a>
+              <a href="index.html" class="nav-link">Home</a>
             </li>
             <li class="nav-item">
-              <a href="product.html" class="nav-link">Shop</a>
+              <a href="#Properties-For-Rent" class="nav-link">Shop</a>
             </li>
             <li class="nav-item">
               <a href="#terms" class="nav-link">Terms</a>
@@ -77,9 +77,9 @@
 
       <div class="content">
         <h1>Find your dream home</h1>
-        <div class="search">
+        <div class="search" id="Properties-For-Rent">
           <input type="text" placeholder="Type Address, City, State" />
-          <a href="">Search</a>
+          <a href="#Properties-For-Rent">Search</a>
         </div>
       </div>
    </header>
@@ -87,7 +87,7 @@
    <!-- Rent Section -->
    <section class="section rent">
       <div class="title">
-        <h1>Properties For Rent</h1>
+        <h1 id="Properties-For-Rent">Properties For Rent</h1>
         <p>
           Explore more than 1,000 properties from the top agencies in the country.
         </p>
@@ -277,7 +277,7 @@
           <form action="">
             <div>
               <input type="email" placeholder="Email Address" />
-              <a href="">Send</a>
+              <a href="mailto: nchedookongwu@yahoo.com">Send</a>
             </div>
           </form>
         </div>
@@ -387,11 +387,11 @@
           <a href="">Top Brands</a>
         </div>
         <div class="col d-flex">
-          <a href="#"<span><i class="bx bxl-facebook-square"></i></span></a>
-          <a href="#"<span><i class="bx bxl-instagram-alt"></i></span></a>
-          <a href="#"<span><i class="bx bxl-github"></i></span></a>
+          <a href="https://facebook.com/dchedos"<span><i class="bx bxl-facebook-square"></i></span></a>
+          <a href="https://instagram.com/nchedo.okongwu"<span><i class="bx bxl-instagram-alt"></i></span></a>
+          <a href="https://github.com/Dchedos"<span><i class="bx bxl-github"></i></span></a>
           <a href="#"<span><i class="bx bxl-twitter"></i></span></a>
-          <a href="#"<span><i class="bx bxl-pinterest"></i></span></a>
+          <a href="https://pin.it/4oRd3Pv"<span><i class="bx bxl-pinterest"></i></span></a>
         </div>
       </div>
       <div class="credit">&copy; copyright @ 2023 by <span>Real Estate Landing Page</span> | all rights reserved!</div>
